@@ -417,7 +417,7 @@ p+ftype+i+l+n+u+g+X
 Growing file p+ftype+l+u+g+i+n+s+growing+X
 .TP
 .B "H"
-all compiled in hashsums (added in AIDE v0.17)
+all compiled in (and not deprecated) hashsums (added in AIDE v0.17)
 .TP
 .B "X"
 acl+selinux+xattrs+e2fsattrs+caps (if attributes are compiled in, added in AIDE v0.16)
